--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,15 @@
-html,
+@font-face {
+  font-family: RobotoNormal;
+  src: url(fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: RobotoItalic;
+  src: url(fonts/Roboto-Italic.ttf);
+}
+
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -23,4 +34,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
