--- a/src/components/summonerPreview/styles.module.css
+++ b/src/components/summonerPreview/styles.module.css
@@ -2,7 +2,8 @@
   font-family: RobotoNormal;
   display: flex;
   align-items: center;
-  background-color: #fffffe;
+  background-color: var(--back);
+  color:var(--text)
 }
 
 .summonerPreview__data {
