refactor: move styles and buttons

--- a/src/components/navBar/styles.module.css
+++ b/src/components/navBar/styles.module.css
@@ -17,3 +17,8 @@
   width: 22%;
   /* border-right: 1px solid #fffffe; */
 }
+
+.navBar__button--selected {
+  background-color: var(--btnBack);
+  color: var(--btnText);
+}
